--- a/front/index.html
+++ b/front/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="./public/ancla.png" />
+    <link rel="icon" href="/ancla.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>my app</title>
 </head>
